# libriddle

./: .gitignore  CMakeLists.txt  FindGMP.cmake  LICENSE  Makefile  README.md  README.rst
.github/workflows/: cmake.yml
src/: riddle.c  riddle.h
tests/: common.c  common.h  test1.c  test2.c  test3.c  test4.c
